[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brood"
version = "0.1.0"
description = ""
readme="README.md"
license = "MIT"
homepage="https://github.com/JoshKarpel/brood"
authors = ["Josh Karpel <josh.karpel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.9.0"
toml = "^0.10.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-mypy = "^0.8.1"

[tool.poetry.scripts]
brood = 'brood.main:app'

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--mypy"]
testpaths = ["tests", "brood"]

[tool.mypy]
pretty = false

files = ["brood/*.py", "tests/*.py"]

exclude = "demo/"

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100
